[client] Drafts Partner view
Details:
- New controller and partial for partner view
- Routing done (`#!/partner/:partnerId`, with dates range in query
params)
- Params inputs implemented

TODO:
- "Draw the rest of the owl"

--- a/client/src/public/i18n/locale-fr-FR.json
+++ b/client/src/public/i18n/locale-fr-FR.json
@@ -119,9 +119,9 @@
   "RATES_INTRO_PARA": "The \"exchange rates\"  view compares the evolution of exchange rates between a selected currency and all the other ones, on the whole period represented in the corpus.",
   "RATES_TITLE": "Rates to ",
   "RATES_TITLE_SORTED_BY": " variations, ordered by ",
-  "RATES_SORT_ALPHA":  "name (A to Z)",
+  "RATES_SORT_ALPHA": "name (A to Z)",
   "RATES_SORT_ALPHA_REVERSED": "name (Z to A)",
-  "RATES_SORT_HIGHEST_RATE":  "maximum value (\uD83E\uDC56)",
+  "RATES_SORT_HIGHEST_RATE": "maximum value (\uD83E\uDC56)",
   "RATES_SORT_AVERAGE_RATE": "average value (\uD83E\uDC56)",
   "SELECT_RATES_SORT": "Order by",
   "SELECT_CURRENCY": "Compare to",
@@ -153,6 +153,12 @@
   "LINE_CHART_PERCENT_1": "Les pourcentages sont basés sur la quantité totale de",
   "LINE_CHART_PERCENT_2": " de ",
   "LINE_CHART_SELECT": "SELECTIONNEZ 5 ENTITES : ",
+  "PARTNER_INTRO_TITLE": "Partenaire commercial",
+  "PARTNER_INTRO_PARA": "La vue Partenaire commercial détaille les échanges commerciaux d'une entité, tels que décrits par les différents reportings.",
+  "PARTNER_TITLE_1": "Le partenaire commercial ",
+  "SELECT_PARTNER": "Chercher un partenaire...",
+  "SELECT_MIN_YEAR": "Date de début",
+  "SELECT_MAX_YEAR": "Date de fin",
   "BILATERAL_INTRO_TITLE": "Bilateral",
   "BILATERAL_INTRO_PARA": "Bilateral montre le commerce entre un pays déclarant et l’un de ses partenaires (type Country). Elle compare la disponibilité des statistiques de commerce bilatéral dans les deux pays sélectionnés. Elle estime la divergence entre les flux miroirs du point du vue du pays déclarant (voir le Glossaire pour la définition des termes).",
   "BILATERAL_1": "Commerce entre ",
