[client] Adds political statuses in partner view
Details:
- Reuses code from Reporting view to add the political statuses chart in
the Partner view
- Multiple translations fix
- Cleans woopsy logs

--- a/client/src/public/i18n/locale-en-EN.json
+++ b/client/src/public/i18n/locale-en-EN.json
@@ -135,8 +135,8 @@
   "REPORTING_PARTNER_HISTO": "In this graph, the partners of the reporting are compared by calculating two indicators:",
   "REPORTING_PARTNER_HISTO_1": "the average bilateral trade share estimated for available years over the selected period",
   "REPORTING_PARTNER_HISTO_2": "the relative bilateral trade balance estimated for each available year over the selected period",
-  "STATUSES_TITLE": "Political statuses of reporting",
-  "STATUSES_INTRO": "This chart represents the evolution of the selected reporting's dependencies count. It also shows the periods of sovereignty.",
+  "REPORTING_STATUSES_TITLE": "Political statuses of reporting",
+  "REPORTING_STATUSES_INTRO": "This chart represents the evolution of the selected reporting's dependencies count. It also shows the periods of sovereignty.",
   "DEPENDENCIES_CAPTION": "Number of dependencies",
   "SOVEREIGNTY_CAPTION": "Periods of sovereignty",
   "DEPENDENCY": "dependency",
@@ -153,6 +153,11 @@
   "LINE_CHART_PERCENT_1": "The percentages are based on the total amount of ",
   "LINE_CHART_PERCENT_2": " of ",
   "LINE_CHART_SELECT": "SELECT UP TO 5 PARTNERS:",
+  "PARTNER_INTRO_TITLE": "Trade partner",
+  "PARTNER_INTRO_PARA": "The Partner view shows the total trade of an entity, as reported by the various reporting entities.",
+  "PARTNER_TITLE_1": "The trade partner ",
+  "PARTNER_STATUSES_TITLE": "Political statuses",
+  "PARTNER_STATUSES_INTRO": "This chart represents the evolution of the selected trade partner's dependencies count. It also shows the periods of sovereignty.",
   "BILATERAL_INTRO_TITLE": "Bilateral",
   "BILATERAL_INTRO_PARA": "Bilateral shows trade between a reporting country and one of its partners (Country type). It compares the availability of bilateral trade statistics in the two selected countries. It estimates the divergence in the mirror flows from the point of view of the reporting country (see Glossary for the definition of terms).",
   "BILATERAL_1": "Trade between ",
