--- a/client/src/public/i18n/locale-fr-FR.json
+++ b/client/src/public/i18n/locale-fr-FR.json
@@ -135,8 +135,8 @@
   "REPORTING_PARTNER_HISTO": "Dans ce graphique, on compare les partenaires du pays déclarant en calculant deux indicateurs:",
   "REPORTING_PARTNER_HISTO_1": "la part moyenne du commerce bilatéral estimé pour les années disponibles au cours de la période sélectionnée",
   "REPORTING_PARTNER_HISTO_2": "le solde commercial bilatéral relatif estimé pour chaque année disponible sur la période sélectionnée",
-  "STATUSES_TITLE": "Statuts politiques du reporting",
-  "STATUSES_INTRO": "Ce graphique représente l'évolution du nombre d'entités dépendantes du reporting sélectionné sur la période, ainsi que ses périodes de souveraineté.",
+  "REPORTING_STATUSES_TITLE": "Statuts politiques du reporting",
+  "REPORTING_STATUSES_INTRO": "Ce graphique représente l'évolution du nombre d'entités dépendantes du reporting sélectionné sur la période, ainsi que ses périodes de souveraineté.",
   "DEPENDENCIES_CAPTION": "Nombre d'entités dépendantes",
   "SOVEREIGNTY_CAPTION": "Périodes de souveraineté",
   "DEPENDENCY": "dépendance",
@@ -156,6 +156,8 @@
   "PARTNER_INTRO_TITLE": "Partenaire commercial",
   "PARTNER_INTRO_PARA": "La vue Partenaire commercial détaille les échanges commerciaux d'une entité, tels que décrits par les différents reportings.",
   "PARTNER_TITLE_1": "Le partenaire commercial ",
+  "PARTNER_STATUSES_TITLE": "Statuts politiques",
+  "PARTNER_STATUSES_INTRO": "Ce graphique représente l'évolution du nombre d'entités dépendantes du partenaire sélectionné sur la période, ainsi que ses périodes de souveraineté.",
   "SELECT_PARTNER": "Chercher un partenaire...",
   "SELECT_MIN_YEAR": "Date de début",
   "SELECT_MAX_YEAR": "Date de fin",
