[client] Fixes swapped locales for Rates view

--- a/client/src/public/i18n/locale-en-EN.json
+++ b/client/src/public/i18n/locale-en-EN.json
@@ -116,17 +116,17 @@
   "WORLD_LINES_2": " of a country is the ",
   "WORLD_TRADE": "total trade",
   "RATES_INTRO": "Exchange rates",
-  "RATES_INTRO_PARA": "La vue \"exchange rates\" propose de comparer l'évolution du taux de change entre une monnaie sélectionnée et toutes les autres, sur toute la durée représentée par le corpus.",
-  "RATES_TITLE": "Taux de change par rapport à ",
-  "RATES_TITLE_SORTED_BY": " triés par ",
-  "RATES_SORT_ALPHA":  "nom (A à Z)",
-  "RATES_SORT_ALPHA_REVERSED": "nom (Z à A)",
-  "RATES_SORT_HIGHEST_RATE":  "taux maximum (\uD83E\uDC56)",
-  "RATES_SORT_AVERAGE_RATE": "taux moyen (\uD83E\uDC56)",
-  "SELECT_RATES_SORT": "Trier par",
-  "SELECT_CURRENCY": "Comparer à",
-  "NO_CURRENCY": "Aucune monnaie ne correspond à ces critères de recherche.",
-  "IN_YEAR": "En",
+  "RATES_INTRO_PARA": "The \"exchange rates\"  view compares the evolution of exchange rates between a selected currency and all the other ones, on the whole period represented in the corpus.",
+  "RATES_TITLE": "Rates to ",
+  "RATES_TITLE_SORTED_BY": " variations, ordered by ",
+  "RATES_SORT_ALPHA": "name (A to Z)",
+  "RATES_SORT_ALPHA_REVERSED": "name (Z to A)",
+  "RATES_SORT_HIGHEST_RATE": "maximum value (\uD83E\uDC56)",
+  "RATES_SORT_AVERAGE_RATE": "average value (\uD83E\uDC56)",
+  "SELECT_RATES_SORT": "Order by",
+  "SELECT_CURRENCY": "Compare to",
+  "NO_CURRENCY": "No currency matches these search settings.",
+  "IN_YEAR": "In",
   "REPORTING_VIEW_INTRO": "The Reporting view shows the total trade of a reporting with all its partners. It compares partner entities according to their average share in the reporting’s total trade, calculates the annual bilateral trade balance and tracks the growth of trade with selected partners.",
   "REPORTING_TITLE_1": "Total trade of reporting ",
   "REPORTING_INTRO_TITLE": "Reporting",
