--- a/client/src/public/i18n/locale-fr-FR.json
+++ b/client/src/public/i18n/locale-fr-FR.json
@@ -119,9 +119,9 @@
   "RATES_INTRO_PARA": "La vue \"exchange rates\" propose de comparer l'évolution du taux de change entre une monnaie sélectionnée et toutes les autres, sur toute la durée représentée par le corpus.",
   "RATES_TITLE": "Taux de change par rapport à ",
   "RATES_TITLE_SORTED_BY": " triés par ",
-  "RATES_SORT_ALPHA":  "nom (A à Z)",
+  "RATES_SORT_ALPHA": "nom (A à Z)",
   "RATES_SORT_ALPHA_REVERSED": "nom (Z à A)",
-  "RATES_SORT_HIGHEST_RATE":  "taux maximum (\uD83E\uDC56)",
+  "RATES_SORT_HIGHEST_RATE": "taux maximum (\uD83E\uDC56)",
   "RATES_SORT_AVERAGE_RATE": "taux moyen (\uD83E\uDC56)",
   "SELECT_RATES_SORT": "Trier par",
   "SELECT_CURRENCY": "Comparer à",
@@ -158,6 +158,7 @@
   "PARTNER_TITLE_1": "Le partenaire commercial ",
   "PARTNER_STATUSES_TITLE": "Statuts politiques",
   "PARTNER_STATUSES_INTRO": "Ce graphique représente l'évolution du nombre d'entités dépendantes du partenaire sélectionné sur la période, ainsi que ses périodes de souveraineté.",
+  "PARTNER_REPORTER_CITATION_TITLE": "Nombre de reporting citant",
   "SELECT_PARTNER": "Chercher un partenaire...",
   "SELECT_MIN_YEAR": "Date de début",
   "SELECT_MAX_YEAR": "Date de fin",
