[client]: Adding heatmap for the reportings in the partner page

--- a/client/src/public/i18n/locale-fr-FR.json
+++ b/client/src/public/i18n/locale-fr-FR.json
@@ -159,6 +159,12 @@
   "PARTNER_STATUSES_TITLE": "Statuts politiques",
   "PARTNER_STATUSES_INTRO": "Ce graphique représente l'évolution du nombre d'entités dépendantes du partenaire sélectionné sur la période, ainsi que ses périodes de souveraineté.",
   "PARTNER_REPORTER_CITATION_TITLE": "Nombre de reporting citant",
+  "PARTNER_REPORTER_HEATMAP_TITLE_1": "Commerce de ",
+  "PARTNER_REPORTER_HEATMAP_TITLE_2": " avec ses reportings",
+  "PARTNER_REPORTER_HEATMAP_TITLE_ORDER": "triés par",
+  "PARTNER_REPORTER_HEATMAP_TITLE_FIELD": "couleur basée sur",
+  "PARTNER_HEATMAP_ORDER_PLACEHOLDER": "",
+  "PARTNER_HEATMAP_FIELD_PLACEHOLDER": "",
   "SELECT_PARTNER": "Chercher un partenaire...",
   "SELECT_MIN_YEAR": "Date de début",
   "SELECT_MAX_YEAR": "Date de fin",
