--- a/client/src/public/i18n/locale-en-EN.json
+++ b/client/src/public/i18n/locale-en-EN.json
@@ -159,6 +159,12 @@
   "PARTNER_STATUSES_TITLE": "Political statuses",
   "PARTNER_STATUSES_INTRO": "This chart represents the evolution of the selected trade partner's dependencies count. It also shows the periods of sovereignty.",
   "PARTNER_REPORTER_CITATION_TITLE": "Reporting number that reference",
+  "PARTNER_REPORTER_HEATMAP_TITLE_1": "Trade of ",
+  "PARTNER_REPORTER_HEATMAP_TITLE_2": " with its reportings",
+  "PARTNER_REPORTER_HEATMAP_TITLE_ORDER": "Order by",
+  "PARTNER_REPORTER_HEATMAP_TITLE_FIELD": "Color based on",
+  "PARTNER_HEATMAP_ORDER_PLACEHOLDER": "",
+  "PARTNER_HEATMAP_FIELD_PLACEHOLDER": "",
   "BILATERAL_INTRO_TITLE": "Bilateral",
   "BILATERAL_INTRO_PARA": "Bilateral shows trade between a reporting country and one of its partners (Country type). It compares the availability of bilateral trade statistics in the two selected countries. It estimates the divergence in the mirror flows from the point of view of the reporting country (see Glossary for the definition of terms).",
   "BILATERAL_1": "Trade between ",
