[client]: Show / Hide heatmaps on partener page

--- a/client/src/public/i18n/locale-en-EN.json
+++ b/client/src/public/i18n/locale-en-EN.json
@@ -231,5 +231,7 @@
   "LEGALS_PROPERTY_PARA2": "Therefore, the information may not be reproduced, modified, republished, re-aired, translated, distributed or reused in any manner, without the written consent of Sciences Po.",
   "LEGALS_PROPERTY_PARA3": "The Sciences Po site’s title, concept and form, as well as its content, such as news, descriptions, illustrations and original images and their organisation, and any software compilation, source code and other elements contained on the Sciences Po site are the property of Sciences Po.",
   "LEGALS_HYPER_PARA1": "Our pages also contain links to other sites for which we are in no manner responsible, neither regarding their adhesion to public order or good conduct, on the one hand, nor regarding their personal data privacy policies and use, on the other.",
-  "LEGALS_HYPER_PARA2": "By accessing an outside site, through a hypertext link, you accept that this access is carried out at your own risk. Therefore, Sciences Po will in no way be held responsible for any direct or indirect damages resulting from your access to an outside site through a hypertext link"
+  "LEGALS_HYPER_PARA2": "By accessing an outside site, through a hypertext link, you accept that this access is carried out at your own risk. Therefore, Sciences Po will in no way be held responsible for any direct or indirect damages resulting from your access to an outside site through a hypertext link",
+  "SHOW": "Show all",
+  "HIDE": "Hide"
 }
