GeoPolHist integration updates: - using status csv to define sovereignty status - smaller barchart - represent non-sovereignty periods - yAxis never before 1816 as we don't have data before - no float ticks in yAxis

--- a/client/src/public/i18n/locale-en-EN.json
+++ b/client/src/public/i18n/locale-en-EN.json
@@ -136,9 +136,9 @@
   "REPORTING_PARTNER_HISTO_1": "the average bilateral trade share estimated for available years over the selected period",
   "REPORTING_PARTNER_HISTO_2": "the relative bilateral trade balance estimated for each available year over the selected period",
   "REPORTING_STATUSES_TITLE": "Political statuses of reporting",
-  "REPORTING_STATUSES_INTRO": "This chart represents the evolution of the selected reporting's dependencies count. It also shows the periods of sovereignty.",
+  "REPORTING_STATUSES_INTRO": "This chart represents the evolution of the selected reporting's dependencies count. It also shows the periods of non-sovereignty.",
   "DEPENDENCIES_CAPTION": "Number of dependencies",
-  "SOVEREIGNTY_CAPTION": "Periods of sovereignty",
+  "SOVEREIGNTY_CAPTION": "Periods of non-sovereignty",
   "DEPENDENCY": "dependency",
   "DEPENDENCIES": "dependencies",
   "PARTNER_HISTO_1": "Trade of ",
