[client]: Correct some wording (2)

--- a/client/src/public/i18n/locale-fr-FR.json
+++ b/client/src/public/i18n/locale-fr-FR.json
@@ -118,12 +118,12 @@
   "RATES_INTRO": "Exchange rates",
   "RATES_INTRO_PARA": "La vue \"exchange rates\" propose de comparer l'évolution du taux de change entre une monnaie sélectionnée et toutes les autres, sur toute la durée représentée par le corpus.",
   "RATES_TITLE": "Taux de change par rapport à ",
-  "RATES_TITLE_SORTED_BY": " triés par ",
+  "RATES_TITLE_SORTED_BY": " ordonnés par ",
   "RATES_SORT_ALPHA": "nom (A à Z)",
   "RATES_SORT_ALPHA_REVERSED": "nom (Z à A)",
   "RATES_SORT_HIGHEST_RATE": "taux maximum (\uD83E\uDC56)",
   "RATES_SORT_AVERAGE_RATE": "taux moyen (\uD83E\uDC56)",
-  "SELECT_RATES_SORT": "Trier par",
+  "SELECT_RATES_SORT": "Ordonné par",
   "SELECT_CURRENCY": "Comparer à",
   "NO_CURRENCY": "Aucune monnaie ne correspond à ces critères de recherche.",
   "IN_YEAR": "En",
@@ -161,7 +161,7 @@
   "PARTNER_REPORTER_CITATION_TITLE": "Nombre de reporting citant",
   "PARTNER_REPORTER_HEATMAP_TITLE_1": "Commerce de ",
   "PARTNER_REPORTER_HEATMAP_TITLE_2": " avec ses reportings",
-  "PARTNER_REPORTER_HEATMAP_TITLE_ORDER": "triés par",
+  "PARTNER_REPORTER_HEATMAP_TITLE_ORDER": "ordonnés par",
   "PARTNER_REPORTER_HEATMAP_TITLE_FIELD": "couleur basée sur",
   "PARTNER_HEATMAP_ORDER_PLACEHOLDER": "",
   "PARTNER_HEATMAP_FIELD_PLACEHOLDER": "",
