[client]: Add ticks on x axes for exchange rate #97

--- a/client/src/public/i18n/locale-fr-FR.json
+++ b/client/src/public/i18n/locale-fr-FR.json
@@ -143,7 +143,7 @@
   "DEPENDENCIES": "dépendances",
   "PARTNER_HISTO_1": "Commerce de ",
   "PARTNER_HISTO_2": " avec ses partneraires ",
-  "PARTNER_HISTO_ORDER_BY": "Ordonné par ",
+  "PARTNER_HISTO_ORDER_BY": "ordonné par ",
   "PARTNER_HISTO_FILTER_ON": "Filtré par ",
   "PARTNER_HISTO_GROUP_BY": "Groupé par ",
   "PARTNER_HISTO_LEG_1": "Part du commerce bilatéral moyenne",
