Frist working version of partners heatmap relates #79

--- a/client/src/public/i18n/locale-en-EN.json
+++ b/client/src/public/i18n/locale-en-EN.json
@@ -141,13 +141,14 @@
   "SOVEREIGNTY_CAPTION": "Periods of non-sovereignty",
   "DEPENDENCY": "dependency",
   "DEPENDENCIES": "dependencies",
-  "PARTNER_HISTO_1": "Trade of ",
-  "PARTNER_HISTO_2": " with partners ",
-  "PARTNER_HISTO_ORDER_BY": "Order by ",
+  "PARTNER_HEATMAP_TITLE_1": "Trade of ",
+  "PARTNER_HEATMAP_TITLE_2": " with its partners ",
+  "PARTNER_HEATMAP_TITLE_ORDER_BY": "Order by ",
   "PARTNER_HISTO_FILTER_ON": "Filter on ",
   "PARTNER_HISTO_GROUP_BY": "Group by ",
   "PARTNER_HISTO_LEG_1": "Average bilateral trade share",
   "PARTNER_HISTO_LEG_2": "Relative bilateral trade balance",
+  "PARTNER_HEATMAP_TITLE_FIELD": "Color based on",
   "LINE_CHART_1": "Trade of ",
   "LINE_CHART_2": " with ",
   "LINE_CHART_PERCENT_1": "The percentages are based on the total amount of ",
