--- a/client/src/public/i18n/locale-fr-FR.json
+++ b/client/src/public/i18n/locale-fr-FR.json
@@ -141,9 +141,9 @@
   "SOVEREIGNTY_CAPTION": "Périodes de non-souveraineté",
   "DEPENDENCY": "dépendance",
   "DEPENDENCIES": "dépendances",
-  "PARTNER_HISTO_1": "Commerce de ",
-  "PARTNER_HISTO_2": " avec ses partneraires ",
-  "PARTNER_HISTO_ORDER_BY": "ordonné par ",
+  "PARTNER_HEATMAP_TITLE_1": "Commerce de ",
+  "PARTNER_HEATMAP_TITLE_2": " avec ses partneraires ",
+  "PARTNER_HEATMAP_TITLE_ORDER_BY": "ordonné par ",
   "PARTNER_HISTO_FILTER_ON": "Filtré par ",
   "PARTNER_HISTO_GROUP_BY": "Groupé par ",
   "PARTNER_HISTO_LEG_1": "Part du commerce bilatéral moyenne",
