partner heatmap done in reporting fixes #79

--- a/client/src/public/i18n/locale-en-EN.json
+++ b/client/src/public/i18n/locale-en-EN.json
@@ -141,9 +141,10 @@
   "SOVEREIGNTY_CAPTION": "Periods of non-sovereignty",
   "DEPENDENCY": "dependency",
   "DEPENDENCIES": "dependencies",
-  "PARTNER_HEATMAP_TITLE_1": "Trade of ",
-  "PARTNER_HEATMAP_TITLE_2": " with its partners ",
-  "PARTNER_HEATMAP_TITLE_ORDER_BY": "Order by ",
+  "PARTNER_HEATMAP_TITLE_1": "Trade partners of ",
+  "PARTNER_HEATMAP_TITLE_2": "Share of trade calculated with",
+  "PARTNER_HEATMAP_TITLE_ORDER_BY": "ordered by ",
+  "PARTNER_HEATMAP_COLOR": "Part of bilateral trade by year",
   "PARTNER_HISTO_FILTER_ON": "Filter on ",
   "PARTNER_HISTO_GROUP_BY": "Group by ",
   "PARTNER_HISTO_LEG_1": "Average bilateral trade share",
