--- a/client/src/public/i18n/locale-fr-FR.json
+++ b/client/src/public/i18n/locale-fr-FR.json
@@ -141,9 +141,10 @@
   "SOVEREIGNTY_CAPTION": "Périodes de non-souveraineté",
   "DEPENDENCY": "dépendance",
   "DEPENDENCIES": "dépendances",
-  "PARTNER_HEATMAP_TITLE_1": "Commerce de ",
-  "PARTNER_HEATMAP_TITLE_2": " avec ses partneraires ",
-  "PARTNER_HEATMAP_TITLE_ORDER_BY": "ordonné par ",
+  "PARTNER_HEATMAP_TITLE_1": "Partenaires commerciaux de ",
+  "PARTNER_HEATMAP_TITLE_2": "Parts de commerce calculées sur ",
+  "PARTNER_HEATMAP_TITLE_ORDER_BY": "ordonnés par ",
+  "PARTNER_HEATMAP_COLOR": "Part du commerce bilatéral par année",
   "PARTNER_HISTO_FILTER_ON": "Filtré par ",
   "PARTNER_HISTO_GROUP_BY": "Groupé par ",
   "PARTNER_HISTO_LEG_1": "Part du commerce bilatéral moyenne",
