refinement reporting - perf issue in brush solved - opacity range update with field choice - translate order options

--- a/client/src/public/i18n/locale-en-EN.json
+++ b/client/src/public/i18n/locale-en-EN.json
@@ -144,7 +144,11 @@
   "PARTNER_HEATMAP_TITLE_1": "Trade partners of ",
   "PARTNER_HEATMAP_TITLE_2": "Share of trade calculated with",
   "PARTNER_HEATMAP_TITLE_ORDER_BY": "ordered by ",
-  "PARTNER_HEATMAP_COLOR": "Part of bilateral trade by year",
+  "PARTNER_HEATMAP_COLOR": "Share of bilateral trade by year",
+  "AVERAGE_SHARE": "Average annual shares of trade",
+  "NUMBER_YEARS": "Number of available years",
+  "NAME": "Entity name",
+  "FIRST_YEAR": "First available year",
   "PARTNER_HISTO_FILTER_ON": "Filter on ",
   "PARTNER_HISTO_GROUP_BY": "Group by ",
   "PARTNER_HISTO_LEG_1": "Average bilateral trade share",
