--- a/client/src/public/i18n/locale-fr-FR.json
+++ b/client/src/public/i18n/locale-fr-FR.json
@@ -145,6 +145,10 @@
   "PARTNER_HEATMAP_TITLE_2": "Parts de commerce calculées sur ",
   "PARTNER_HEATMAP_TITLE_ORDER_BY": "ordonnés par ",
   "PARTNER_HEATMAP_COLOR": "Part du commerce bilatéral par année",
+  "AVERAGE_SHARE": "Moyenne des parts de commerce annuelles",
+  "NUMBER_YEARS": "Nombre d'années disponibles",
+  "NAME": "Nom de l'entité",
+  "FIRST_YEAR": "Première année disponible",
   "PARTNER_HISTO_FILTER_ON": "Filtré par ",
   "PARTNER_HISTO_GROUP_BY": "Groupé par ",
   "PARTNER_HISTO_LEG_1": "Part du commerce bilatéral moyenne",
