--- a/client/src/public/i18n/locale-en-EN.json
+++ b/client/src/public/i18n/locale-en-EN.json
@@ -135,10 +135,11 @@
   "REPORTING_PARTNER_HISTO": "In this graph, the partners of the reporting are compared by calculating two indicators:",
   "REPORTING_PARTNER_HISTO_1": "the average bilateral trade share estimated for available years over the selected period",
   "REPORTING_PARTNER_HISTO_2": "the relative bilateral trade balance estimated for each available year over the selected period",
-  "REPORTING_STATUSES_TITLE": "Political statuses of reporting",
-  "REPORTING_STATUSES_INTRO": "This chart represents the evolution of the selected reporting's dependencies count. It also shows the periods of non-sovereignty.",
-  "DEPENDENCIES_CAPTION": "Number of dependencies",
-  "SOVEREIGNTY_CAPTION": "Periods of non-sovereignty",
+  "POLITICAL_STATUSES_TITLE": "Political statuses",
+  "POLITICAL_STATUSES_INTRO": "This chart represents the selected entity's dependencies count. It also shows the periods of non-sovereignty.",
+  "POLITICAL_STATUSES_MISSING": "No GeoPolHist data avaialabe for this entity.",
+  "POLITICAL_STATUSES_DEPENDENCIES_CAPTION": "Number of dependencies",
+  "POLITICAL_STATUSES_SOVEREIGNTY_CAPTION": "Periods of non-sovereignty",
   "DEPENDENCY": "dependency",
   "DEPENDENCIES": "dependencies",
   "PARTNER_HEATMAP_TITLE_1": "Trade partners of ",
