--- a/client/src/public/i18n/locale-fr-FR.json
+++ b/client/src/public/i18n/locale-fr-FR.json
@@ -135,10 +135,11 @@
   "REPORTING_PARTNER_HISTO": "Dans ce graphique, on compare les partenaires du pays déclarant en calculant deux indicateurs:",
   "REPORTING_PARTNER_HISTO_1": "la part moyenne du commerce bilatéral estimé pour les années disponibles au cours de la période sélectionnée",
   "REPORTING_PARTNER_HISTO_2": "le solde commercial bilatéral relatif estimé pour chaque année disponible sur la période sélectionnée",
-  "REPORTING_STATUSES_TITLE": "Statut politique du reporting",
-  "REPORTING_STATUSES_INTRO": "Ce graphique représente l'évolution du nombre d'entités dépendantes du reporting sélectionné sur la période, ainsi que ses périodes de souveraineté.",
-  "DEPENDENCIES_CAPTION": "Nombre d'entités dépendantes",
-  "SOVEREIGNTY_CAPTION": "Périodes de non-souveraineté",
+  "POLITICAL_STATUSES_TITLE": "Statut politique",
+  "POLITICAL_STATUSES_INTRO": "Ce graphique représente le nombre d'entités dépendantes de l'entité sélectionnée sur la période, ainsi que ses périodes de non-souveraineté.",
+  "POLITICAL_STATUSES_MISSING": "Pas de données GeoPolHist disponibles pour cette entité.",
+  "POLITICAL_STATUSES_DEPENDENCIES_CAPTION": "Nombre d'entités dépendantes",
+  "POLITICAL_STATUSES_SOVEREIGNTY_CAPTION": "Périodes de non-souveraineté",
   "DEPENDENCY": "dépendance",
   "DEPENDENCIES": "dépendances",
   "PARTNER_HEATMAP_TITLE_1": "Partenaires commerciaux de ",
