--- a/client/src/public/i18n/locale-en-EN.json
+++ b/client/src/public/i18n/locale-en-EN.json
@@ -130,14 +130,16 @@
   "REPORTING_VIEW_INTRO": "The Reporting view shows the total trade of a reporting with all its partners. It compares partner entities according to their average share in the reporting’s total trade, calculates the annual bilateral trade balance and tracks the growth of trade with selected partners.",
   "REPORTING_TITLE_1": "Total trade of reporting ",
   "REPORTING_INTRO_TITLE": "Reporting",
-  "REPORTING_INTRO_PARA": "Reporting focuses on the  distribution of trade by partners of a reporting. This view compares the partner entities according to their share in the reporting’s total trade, calculates the annual bilateral trade balance and tracks the growth of trade with selected partners.",
+  "REPORTING_DATA_AVAILABLE": "Bilateral trade data available for ",
+  "REPORTING_INTRO_PARA": "For the selected reporting, the Reporting view specifies the political status and provides a number of visualizations that describe the growth of total trade and bilateral trade (by partner).",
   "REPORTING_VIEW_DUAL_LEGEND": "In this graph, total trade equals the sum of export (import) flows with all partner entities.",
   "REPORTING_PARTNER_HISTO": "In this graph, the partners of the reporting are compared by calculating two indicators:",
   "REPORTING_PARTNER_HISTO_1": "the average bilateral trade share estimated for available years over the selected period",
   "REPORTING_PARTNER_HISTO_2": "the relative bilateral trade balance estimated for each available year over the selected period",
   "REPORTING_PARTNER_CITATION_TITLE": "Number of trade partners cited by",
-  "POLITICAL_STATUSES_TITLE": "Political statuses",
-  "POLITICAL_STATUSES_INTRO": "This chart represents the selected entity's dependencies count. It also shows the periods of non-sovereignty.",
+  "POLITICAL_STATUSES_TITLE": "Political status of",
+  "POLITICAL_STATUSES_FROM": "from",
+  "POLITICAL_STATUSES_INTRO": "For the selected reporting, this chart specifies periods of non-sovereignty and the count of dependent entities.",
   "POLITICAL_STATUSES_MISSING": "No GeoPolHist data avaialabe for this entity.",
   "POLITICAL_STATUSES_DEPENDENCIES_CAPTION": "Number of dependencies",
   "POLITICAL_STATUSES_SOVEREIGNTY_CAPTION": "Periods of non-sovereignty",
