--- a/client/src/public/i18n/locale-fr-FR.json
+++ b/client/src/public/i18n/locale-fr-FR.json
@@ -129,15 +129,17 @@
   "IN_YEAR": "En",
   "REPORTING_VIEW_INTRO": "La vue Reporting montre comment le commerce total d’un pays déclarant se répartit entre les différentes entités partenaires. Elle compare les entités partenaires d’après leur part moyenne dans le commerce total du pays déclarant, calcule le solde commercial bilatéral annuel et permet de suivre l’évolution du commerce du pays déclarant avec une sélection d’entités partenaires.",
   "REPORTING_TITLE_1": "Commerce total du reporting ",
+  "REPORTING_DATA_AVAILABLE": "Données de commerce bilatérale disponibles pour ",
   "REPORTING_INTRO_TITLE": "Reporting",
-  "REPORTING_INTRO_PARA": "Reporting détaille la répartition  par partenaires du commerce d’un pays rapporteur. Cette vue compare les entités partenaires suivant leur part dans le commerce total du pays rapporteur, calcule le solde commercial bilatéral annuel et permet de suivre l’évolution du commerce avec une sélection de partenaires.",
+  "REPORTING_INTRO_PARA": "Pour le reporting sélectionné, la vue Reporting précise le statut politique et propose plusieurs visualisations qui décrivent l’évolution du commerce total et du commerce bilatéral (par partner).",
   "REPORTING_VIEW_DUAL_LEGEND": "Dans ce graphique, le commerce total est égal à la somme des flux exportations (importations)  avec toutes les entités partenaires.",
   "REPORTING_PARTNER_HISTO": "Dans ce graphique, on compare les partenaires du pays déclarant en calculant deux indicateurs:",
   "REPORTING_PARTNER_HISTO_1": "la part moyenne du commerce bilatéral estimé pour les années disponibles au cours de la période sélectionnée",
   "REPORTING_PARTNER_HISTO_2": "le solde commercial bilatéral relatif estimé pour chaque année disponible sur la période sélectionnée",
   "REPORTING_PARTNER_CITATION_TITLE": "Nombre de partenaires commerciaux cités par",
-  "POLITICAL_STATUSES_TITLE": "Statut politique",
-  "POLITICAL_STATUSES_INTRO": "Ce graphique représente le nombre d'entités dépendantes de l'entité sélectionnée sur la période, ainsi que ses périodes de non-souveraineté.",
+  "POLITICAL_STATUSES_TITLE": "Statut politique de",
+  "POLITICAL_STATUSES_FROM": "d'après",
+  "POLITICAL_STATUSES_INTRO": "Pour le reporting sélectionné, ce graphique précise les périodes de non-souveraineté ainsi que le nombre d’entités dépendantes.",
   "POLITICAL_STATUSES_MISSING": "Pas de données GeoPolHist disponibles pour cette entité.",
   "POLITICAL_STATUSES_DEPENDENCIES_CAPTION": "Nombre d'entités dépendantes",
   "POLITICAL_STATUSES_SOVEREIGNTY_CAPTION": "Périodes de non-souveraineté",
