--- a/client/src/public/i18n/locale-fr-FR.json
+++ b/client/src/public/i18n/locale-fr-FR.json
@@ -115,7 +115,7 @@
   "WORLD_LINES_1": "Dans ce graphique, le ",
   "WORLD_LINES_2": " d'un pays est le ",
   "WORLD_TRADE": "commerce total",
-  "RATES_INTRO": "Exchange rates",
+  "RATES_INTRO": "Exchange rates par rapport à",
   "RATES_INTRO_PARA": "La vue \"exchange rates\" propose de comparer l'évolution du taux de change entre une monnaie sélectionnée et toutes les autres, sur toute la durée représentée par le corpus.",
   "RATES_TITLE": "Taux de change par rapport à ",
   "RATES_TITLE_SORTED_BY": " ordonnés par ",
