Adding legend on heatmap for the page partner

--- a/client/src/public/i18n/locale-en-EN.json
+++ b/client/src/public/i18n/locale-en-EN.json
@@ -148,7 +148,11 @@
   "PARTNER_HEATMAP_TITLE_1": "Trade partners of ",
   "PARTNER_HEATMAP_TITLE_2": "Share of trade calculated with",
   "PARTNER_HEATMAP_TITLE_ORDER_BY": "ordered by ",
-  "PARTNER_HEATMAP_COLOR": "Share of bilateral trade by year",
+  "PARTNER_HEATMAP_LEGEND_FADEIN": "FIXME: Part du commerce bilatéral par année",
+  "PARTNER_HEATMAP_LEGEND_PERCENTIL": "FIXME: La couleur de la ligne du pays represente le tiertile par rapport au volume globale",
+  "PARTNER_HEATMAP_LEGEND_PERCENTIL_1": "FIXME: premier 'tiertile'",
+  "PARTNER_HEATMAP_LEGEND_PERCENTIL_2": "FIXME: second 'tiertile'",
+  "PARTNER_HEATMAP_LEGEND_PERCENTIL_3": "FIXME: troisième 'tiertile'",
   "AVERAGE_SHARE": "Average annual shares of trade",
   "NUMBER_YEARS": "Number of available years",
   "NAME": "Entity name",
