--- a/client/src/public/i18n/locale-fr-FR.json
+++ b/client/src/public/i18n/locale-fr-FR.json
@@ -148,7 +148,11 @@
   "PARTNER_HEATMAP_TITLE_1": "Partenaires commerciaux de ",
   "PARTNER_HEATMAP_TITLE_2": "Parts de commerce calculées sur ",
   "PARTNER_HEATMAP_TITLE_ORDER_BY": "ordonnés par ",
-  "PARTNER_HEATMAP_COLOR": "Part du commerce bilatéral par année",
+  "PARTNER_HEATMAP_LEGEND_FADEIN": "Part du commerce bilatéral par année",
+  "PARTNER_HEATMAP_LEGEND_PERCENTIL": "La couleur de la ligne du pays represente le tiertile par rapport au volume globale",
+  "PARTNER_HEATMAP_LEGEND_PERCENTIL_1": "Premier 'tiertile'",
+  "PARTNER_HEATMAP_LEGEND_PERCENTIL_2": "Second 'tiertile'",
+  "PARTNER_HEATMAP_LEGEND_PERCENTIL_3": "Troisième 'tiertile'",
   "AVERAGE_SHARE": "Moyenne des parts de commerce annuelles",
   "NUMBER_YEARS": "Nombre d'années disponibles",
   "NAME": "Nom de l'entité",
