text adjusts in home, world and reporting

--- a/client/src/public/i18n/locale-en-EN.json
+++ b/client/src/public/i18n/locale-en-EN.json
@@ -1,11 +1,14 @@
 {
   "HOME_INTRO": "The RICardo Project",
   "HOME_INTRO_LEAD": "Trade between Nations from c. 1800 to 1938",
-  "HOME_INTRO_PARA": "RICardo (Research on International Commerce) is a project dedicated to trade between nations over a period spanning the beginning of the Industrial Revolution to the eve of the Second World War. It combines a historical trade database covering all of the world’s countries and a website which invites to an exploration of the history of international trade through data visualizations.",
+  "HOME_INTRO_PARA": "RICardo (Research on International Commerce) is a project dedicated to trade between nations over a period spanning the beginning of the Industrial Revolution to the eve of the Second World War.",
+  "HOME_INTRO_PARA_2": "It combines a historical trade database covering all of the world’s countries and a website which invites to an exploration of the history of international trade through data visualizations.",
   "HOME_METADATA_PARA": "Metadata provides an overview of  bilateral and total trade data availability",
   "HOME_WORLD_PARA": "World provides different historical series of world trade and its breakdown by countries",
   "HOME_REPORTING_PARA": "Reporting depicts the distribution of trade  by partners of a reporting",
+  "HOME_PARTNER_PARA": "Partner depicts an entity’s trade as it is reported by the reportings",
   "HOME_BILATERAL_PARA": "Bilateral focuses on trade between two countries and allows for a comparison between their trade statistics",
+  "HOME_RATES_PARA": "Exchange rates provides a visualization of the exchange rate database",
   "HOME_SCIENCE_TITLE": "Open Science",
   "HOME_SCIENCE_LEAD": "Tools and data produced in the RICardo project are in free access:",
   "HOME_SCIENCE_SUBTITLE1": "Source code of the exploration tool",
@@ -113,7 +116,7 @@
   "WORLD_REPORTINGS_2": " to build the curve",
   "WORLD_COMPARAISON": "Total trade comparison with",
   "WORLD_LINES_1": "In this graph the ",
-  "WORLD_LINES_2": " of a country is the ",
+  "WORLD_LINES_2": " of the selected reportings is estimated with the method ",
   "WORLD_TRADE": "total trade",
   "RATES_INTRO": "Exchange rates to",
   "RATES_INTRO_PARA": "The \"exchange rates\"  view compares the evolution of exchange rates between a selected currency and all the other ones, on the whole period represented in the corpus.",
@@ -133,22 +136,23 @@
   "REPORTING_DATA_AVAILABLE": "Bilateral trade data available for ",
   "REPORTING_INTRO_PARA": "For the selected reporting, the Reporting view specifies the political status and provides a number of visualizations that describe the growth of total trade and bilateral trade (by partner).",
   "REPORTING_VIEW_DUAL_LEGEND": "In this graph, total trade equals the sum of export (import) flows with all partner entities.",
-  "REPORTING_PARTNER_HISTO": "In this graph, the partners of the reporting are compared by calculating two indicators:",
-  "REPORTING_PARTNER_HISTO_1": "the average bilateral trade share estimated for available years over the selected period",
-  "REPORTING_PARTNER_HISTO_2": "the relative bilateral trade balance estimated for each available year over the selected period",
-  "REPORTING_PARTNER_CITATION_TITLE": "Number of trade partners cited by",
+  "REPORTING_PARTNER_CITATION_TITLE": "Number of partners of ",
+  "REPORTING_PARTNER_CITATION": "For the selected reporting, this chart indicates the annual count of partners identified in the statistical sources and used in the calculation of",
   "POLITICAL_STATUSES_TITLE": "Political status of",
   "POLITICAL_STATUSES_FROM": "from",
-  "POLITICAL_STATUSES_INTRO": "For the selected reporting, this chart specifies periods of non-sovereignty and the count of dependent entities.",
+  "POLITICAL_STATUSES_INTRO": "For the selected reporting, this chart specifies periods of non-sovereignty and the count of dependent entities. Note that GeoPolHist starts only from 1816.",
+  "POLITICAL_STATUSES_INTRO_2": "Notes: les données GeoPolHist ne sont disponibles qu'à partir de 1816.",
   "POLITICAL_STATUSES_MISSING": "No GeoPolHist data avaialabe for this entity.",
   "POLITICAL_STATUSES_DEPENDENCIES_CAPTION": "Number of dependencies",
   "POLITICAL_STATUSES_SOVEREIGNTY_CAPTION": "Periods of non-sovereignty",
   "DEPENDENCY": "dependency",
   "DEPENDENCIES": "dependencies",
-  "PARTNER_HEATMAP_TITLE_1": "Trade partners of ",
+  "PARTNER_HEATMAP_TITLE_1": "Partners of ",
   "PARTNER_HEATMAP_TITLE_2": "Share of trade calculated with",
   "PARTNER_HEATMAP_TITLE_ORDER_BY": "ordered by ",
-  "PARTNER_HEATMAP_LEGEND_FADEIN": "FIXME: Part du commerce bilatéral par année",
+  "REPORTING_PARTNER_HEATMAP_1": "This graph provides an overall partner comparison by representing their annual share in the reporting trade.",
+  "REPORTING_PARTNER_HEATMAP_2": "Note that it is flawed by the variable number of partners each year",
+  "PARTNER_HEATMAP_LEGEND_FADEIN": "Bilateral trade annual share",
   "PARTNER_HEATMAP_LEGEND_PERCENTIL": "FIXME: La couleur de la ligne du pays represente le tiertile par rapport au volume globale",
   "PARTNER_HEATMAP_LEGEND_PERCENTIL_1": "FIXME: premier 'tiertile'",
   "PARTNER_HEATMAP_LEGEND_PERCENTIL_2": "FIXME: second 'tiertile'",
