--- a/client/src/public/i18n/locale-fr-FR.json
+++ b/client/src/public/i18n/locale-fr-FR.json
@@ -1,11 +1,14 @@
 {
   "HOME_INTRO": "The RICardo Project",
   "HOME_INTRO_LEAD": "Trade between Nations from c. 1800 to 1938",
-  "HOME_INTRO_PARA": "RICardo (Research on International Commerce) est un projet dédié au commerce entre nations sur une période allant des débuts de la Révolution industrielle à la veille de la Seconde Guerre mondiale. Il allie une base historique de données commerciales couvrant tous les pays du monde à un site web qui propose une exploration de l’histoire du commerce international à partir de visualisations.",
+  "HOME_INTRO_PARA": "RICardo (Research on International Commerce) est un projet dédié au commerce entre nations sur une période allant des débuts de la Révolution industrielle à la veille de la Seconde Guerre mondiale.",
+  "HOME_INTRO_PARA_2": "Il allie une base historique de données commerciales couvrant tous les pays du monde à un site web qui propose une exploration de l’histoire du commerce international à partir de visualisations.",
   "HOME_METADATA_PARA": "Metadata offre une vue d’ensemble de la disponibilité des données de commerce total et bilatéral",
   "HOME_WORLD_PARA": "World propose différentes séries historiques du commerce mondial et leur répartition par pays",
   "HOME_REPORTING_PARA": "Reporting décrit la répartition par partenaires du commerce d’un reporting",
+  "HOME_PARTNER_PARA": "Partner décrit le commerce d’une entité tel qu’il est rapporté par les reportings",
   "HOME_BILATERAL_PARA": "Bilateral se concentre sur le commerce entre deux pays et permet une comparaison de leurs statistiques commerciales",
+  "HOME_RATES_PARA": "Exchange rates propose une visualisation de la base de taux de change",
   "HOME_SCIENCE_TITLE": "Science Ouverte",
   "HOME_SCIENCE_LEAD": "Les outils et données produites dans le cadre du projet RICardo sont librement accessibles :",
   "HOME_SCIENCE_SUBTITLE1": "Code Source de l'outil d'exploration",
@@ -113,7 +116,7 @@
   "WORLD_REPORTINGS_2": " pour construire cette courbe",
   "WORLD_COMPARAISON": "Commerce total comparé avec ",
   "WORLD_LINES_1": "Dans ce graphique, le ",
-  "WORLD_LINES_2": " d'un pays est le ",
+  "WORLD_LINES_2": " des reportings sélectionnés est estimé par la méthode ",
   "WORLD_TRADE": "commerce total",
   "RATES_INTRO": "Exchange rates par rapport à",
   "RATES_INTRO_PARA": "La vue \"exchange rates\" propose de comparer l'évolution du taux de change entre une monnaie sélectionnée et toutes les autres, sur toute la durée représentée par le corpus.",
@@ -133,20 +136,21 @@
   "REPORTING_INTRO_TITLE": "Reporting",
   "REPORTING_INTRO_PARA": "Pour le reporting sélectionné, la vue Reporting précise le statut politique et propose plusieurs visualisations qui décrivent l’évolution du commerce total et du commerce bilatéral (par partner).",
   "REPORTING_VIEW_DUAL_LEGEND": "Dans ce graphique, le commerce total est égal à la somme des flux exportations (importations)  avec toutes les entités partenaires.",
-  "REPORTING_PARTNER_HISTO": "Dans ce graphique, on compare les partenaires du pays déclarant en calculant deux indicateurs:",
-  "REPORTING_PARTNER_HISTO_1": "la part moyenne du commerce bilatéral estimé pour les années disponibles au cours de la période sélectionnée",
-  "REPORTING_PARTNER_HISTO_2": "le solde commercial bilatéral relatif estimé pour chaque année disponible sur la période sélectionnée",
   "REPORTING_PARTNER_CITATION_TITLE": "Nombre de partenaires commerciaux cités par",
+  "REPORTING_PARTNER_CITATION": "Pour le reporting sélectionné, ce graphique indique le nombre annuel de partners identifiés dans les sources statistiques et utilisés pour le calcul de",
   "POLITICAL_STATUSES_TITLE": "Statut politique de",
   "POLITICAL_STATUSES_FROM": "d'après",
   "POLITICAL_STATUSES_INTRO": "Pour le reporting sélectionné, ce graphique précise les périodes de non-souveraineté ainsi que le nombre d’entités dépendantes.",
+  "POLITICAL_STATUSES_INTRO_2": "Notes: les données GeoPolHist ne sont disponibles qu'à partir de 1816.",
   "POLITICAL_STATUSES_MISSING": "Pas de données GeoPolHist disponibles pour cette entité.",
   "POLITICAL_STATUSES_DEPENDENCIES_CAPTION": "Nombre d'entités dépendantes",
   "POLITICAL_STATUSES_SOVEREIGNTY_CAPTION": "Périodes de non-souveraineté",
   "DEPENDENCY": "dépendance",
   "DEPENDENCIES": "dépendances",
-  "PARTNER_HEATMAP_TITLE_1": "Partenaires commerciaux de ",
+  "PARTNER_HEATMAP_TITLE_1": "Partners de ",
   "PARTNER_HEATMAP_TITLE_2": "Parts de commerce calculées sur ",
+  "REPORTING_PARTNER_HEATMAP_1": "Ce graphique offre une comparaison des partners en représentant leur part dans le commerce du reporting par année.",
+  "REPORTING_PARTNER_HEATMAP_2": "Noter qu’elle est imparfaite car le nombre de partners varie selon les années.",
   "PARTNER_HEATMAP_TITLE_ORDER_BY": "ordonnés par ",
   "PARTNER_HEATMAP_LEGEND_FADEIN": "Part du commerce bilatéral par année",
   "PARTNER_HEATMAP_LEGEND_PERCENTIL": "La couleur de la ligne du pays represente le tiertile par rapport au volume globale",
